--- a/index.html
+++ b/index.html
@@ -1,68 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Sign-Up Page</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="splash">
-        <div class="splash-banner">
-            <img src="odin-lined.png" alt="odin logo">
-            <span>ODIN</span>
-        </div>
+      <div class="splash-banner">
+        <img src="odin-lined.png" alt="odin logo" />
+        <span>ODIN</span>
+      </div>
     </div>
     <div class="content">
-        <div class="quote">
-            <div>
-                <p>This is not a real online service! You know you need something like this in your life to realize your
-                    deepest dreams.
-                    Signup now to get started.
-                </p>
-                <p>You <i>know</i> you want to.</p>
-            </div>
+      <div class="quote">
+        <div>
+          <p>
+            This is not a real online service! You know you need something like
+            this in your life to realize your deepest dreams. Signup now to get
+            started.
+          </p>
+          <p>You <i>know</i> you want to.</p>
         </div>
-        <form>
-            <div class="sign-up">
-                <h2>Lets Do This!</h2>
-                <div class="forms">
-                    <div>
-                        <label for="fname">First Name</label><br>
-                        <input type="text" id="fname" name="fname" required>
-                    </div>
-                    <div>
-                        <label for="lname">Last Name</label><br>
-                        <input type="text" id="lname" name="lname" required>
-                    </div>
-                    <div>
-                        <label for="email">Email</label><br>
-                        <input type="email" id="email" name="email" placeholder="name@mail.com" title="hmm?" required>
-                    </div>
-                    <div>
-                        <label for="phone">Phone Number</label><br>
-                        <input type="tel" id="phone" name="phone" placeholder="555-123-1234"
-                            pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
-                    </div>
-                    <div>
-                        <label for="pword">Password</label><br>
-                        <input type="password" id="pword" name="pword" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
-                            title="why you doing it wrong?" required>
-                    </div>
-                    <div>
-                        <label for="confirmpword">Confirm Password</label><br>
-                        <input type="password" id="confirmpword" name="confirmpword" required>
-                    </div>
-                </div>
+      </div>
+      <form name="signup" onsubmit="return validatePassword()" method="post">
+        <div class="sign-up">
+          <h2>Lets Do This!</h2>
+          <div class="forms">
+            <div>
+              <label for="fname">First Name*</label><br />
+              <input type="text" id="fname" name="fname" required />
             </div>
-            <div class="submit-area">
-                <button>Create Account</button>
-                <p>Already have an account? <a href="">Log in</a></p>
+            <div>
+              <label for="lname">Last Name*</label><br />
+              <input type="text" id="lname" name="lname" required />
             </div>
-        </form>
+            <div>
+              <label for="email">Email*</label><br />
+              <input
+                type="email"
+                id="email"
+                name="email"
+                placeholder="name@mail.com"
+                required
+              />
+            </div>
+            <div>
+              <label for="phone">Phone Number</label><br />
+              <input
+                type="tel"
+                id="phone"
+                name="phone"
+                placeholder="555-123-1234"
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+              />
+            </div>
+            <div>
+              <label for="pword">Password*</label><br />
+              <input
+                type="password"
+                id="pword"
+                name="pword"
+                pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+                title="why you doing it wrong?"
+                required
+              />
+              <p id="pword-error-text">This will say something later</p>
+            </div>
+            <div>
+              <label for="confirmpword">Confirm Password*</label><br />
+              <input
+                type="password"
+                id="confirmpword"
+                name="confirmpword"
+                required
+              />
+            </div>
+          </div>
+        </div>
+        <div class="submit-area">
+          <button>Create Account</button>
+          <p>Already have an account? <a href="">Log in</a></p>
+        </div>
+      </form>
     </div>
-</body>
-
+    <script src="script.js"></script>
+  </body>
 </html>
